--- a/css/footer.css
+++ b/css/footer.css
@@ -10,7 +10,7 @@ footer .footer-container .icons {
     justify-content: center;
     align-items: end;
     margin: 0 auto;
-    width: 100vw;
+    width: 100%;
     height: 10vh;
     gap: 10px;
 
@@ -49,7 +49,7 @@ footer .footer-container ul {
     margin: 0 auto;
     gap: 15px;
     padding: 0;
-    width: 100vw;
+    width: 100%;
     height: 3vh;
 
 }
